welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:4: error: not found: value getHauteurMonde
  if (getX() == getHauteurMonde() -1 && getY() == getHauteurMonde() -1){
                ^ZigZag:4: error: not found: value getHauteurMonde
  if (getX() == getHauteurMonde() -1 && getY() == getHauteurMonde() -1){
                                                  ^ZigZag:14: error: not found: value getLongueurMonde
    if(getX()== getLongueurMonde() -1 ){
                ^